feat: audit remediation phase 1 — security, DB, Kafka, frontend fixes
## Security (#22, #23, #24)
- Fix /api/admin/** unprotected: add ROLE_PLATFORM_ADMIN authority chain
- Fix JwtAuthFilter silent passthrough → return 401 on invalid token
- Add AdminAuthController + LoginPage.vue for platform admin login
- Replace CORS wildcard with configurable CORS_ALLOWED_ORIGINS env var
- Move DB password + JWT secret to .env (add .env.example)

## Database (#26, #31, #32)
- Add FK constraints: orders.merchant_id → merchant,
  daily_statistics.{merchant,platform,channel}_id → respective tables
- Fix DailyStatistics entity missing @CreationTimestamp import
- Fix DATE() index-defeating queries → range queries in
  OrderRepository and ReturnOrderRepository

## Kafka reliability (#25, #37, #39)
- Fix RetrySchedulerJob: wrap DLT-routed messages in {dltInfo} envelope
- Fix RetryJobConsumer catch block: send proper DLT format, not raw string
- Implement DltConsumer.recordDltMessage() → persists to failed_task_logs
- Fix gateway Kafka bootstrap-servers hardcoded localhost → env var
- Add FailedTaskLog entity + FailedTaskLogRepository

## Frontend (#27, #29)
- Order.isRollback Boolean → primitive boolean + @Builder.Default
- Order channel filter: replace hardcoded platform strings with
  dynamic channel list from API using real channelId values

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>