@@ -1,6 +1,7 @@
 package com.simpleec.api.security;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -13,6 +14,7 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -24,6 +26,9 @@ import java.util.List;
 public class SecurityConfig {
     private final JwtAuthFilter jwtAuthFilter;
 
+    @Value("${simpleec.cors.allowed-origins:http://localhost:8080,http://localhost:5173,http://localhost:3000}")
+    private String allowedOriginsConfig;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
@@ -32,7 +37,11 @@ public class SecurityConfig {
             .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .anonymous(a -> a.principal("anonymousUser"))
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/health", "/api/health/**", "/api/version", "/actuator/**", "/api/actuator/**", "/api/auth/**", "/api/admin/**", "/api/user/channels/platforms", "/api/enums/**").permitAll()
+                .requestMatchers("/api/health", "/api/health/**", "/api/version",
+                    "/actuator/**", "/api/actuator/**",
+                    "/api/auth/**", "/api/admin/auth/**",
+                    "/api/user/channels/platforms", "/api/enums/**").permitAll()
+                .requestMatchers("/api/admin/**").hasAuthority("ROLE_PLATFORM_ADMIN")
                 .anyRequest().authenticated()
             )
             .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
@@ -47,7 +56,8 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         var config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(List.of("*"));
+        List<String> origins = Arrays.asList(allowedOriginsConfig.split(","));
+        config.setAllowedOrigins(origins);
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
